--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
     <title>My Learning Journal</title>
 </head>
 <body>
@@ -104,7 +108,7 @@
             <section class="more-info-header">
                     <h3>NOVEMBER 10th, 2024</h3>
                     <h2>My new journey as Scrimba student</h2>
-                    <p>After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Scrimba because that is the best website to learn Frontend.</p>
+                    <p class="more-info-header-p">After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Scrimba because that is the best website to learn Frontend.</p>
                 </article>
                     <img src="./Images/Scrimba.png" alt="Scrimba courses page">
                 <article class="more-info-article">
